[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_n1h4j"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_n1h4j")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "COSMIC CIVILIZATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Procedural World Demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="VBox"]
layout_mode = 2
text = "NEW WORLD"

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBox"]
layout_mode = 2
text = "QUIT"